--- a/.gitignore
+++ b/.gitignore
@@ -30,32 +30,32 @@ _ReSharper*/
 /debug
 /publish
 /TestResults
-/build/publish
+/AuthTips/publish
 /live/Xn.Platform.Presentation.WebLive/Content
 /live/Xn.Platform.Presentation.WebLive/Scripts
 /video/Xn.Platform.Presentation.WebVideo/Content
 /video/Xn.Platform.Presentation.WebVideo/Scripts
 /houtai/Xn.Platform.Presentation.Admin/uploads
 sh.exe.stackdump
-/build/TestResults
-/build/Xn.Platform.Everything.sln.DotSettings.user
-/build/packages/Newtonsoft.Json.10.0.3/*.md
-/build/packages/Newtonsoft.Json.10.0.3/*.nupkg
-/build/packages/Newtonsoft.Json.10.0.3/lib/net20/*.dll
-/build/packages/Newtonsoft.Json.10.0.3/lib/net20/*.xml
-/build/packages/Newtonsoft.Json.10.0.3/lib/net35/*.dll
-/build/packages/Newtonsoft.Json.10.0.3/lib/net35/*.xml
-/build/packages/Newtonsoft.Json.10.0.3/lib/net40/*.dll
-/build/packages/Newtonsoft.Json.10.0.3/lib/net40/*.xml
-/build/packages/Newtonsoft.Json.10.0.3/lib/net45/*.dll
-/build/packages/Newtonsoft.Json.10.0.3/lib/net45/*.xml
-/build/packages/Newtonsoft.Json.10.0.3/lib/netstandard1.0/*.dll
-/build/packages/Newtonsoft.Json.10.0.3/lib/netstandard1.0/*.xml
-/build/packages/Newtonsoft.Json.10.0.3/lib/netstandard1.3/*.dll
-/build/packages/Newtonsoft.Json.10.0.3/lib/netstandard1.3/*.xml
-/build/packages/Newtonsoft.Json.10.0.3/lib/portable-net40+sl5+win8+wp8+wpa81/*.dll
-/build/packages/Newtonsoft.Json.10.0.3/lib/portable-net40+sl5+win8+wp8+wpa81/*.xml
-/build/packages/Newtonsoft.Json.10.0.3/lib/portable-net45+win8+wp8+wpa81/*.dll
-/build/packages/Newtonsoft.Json.10.0.3/lib/portable-net45+win8+wp8+wpa81/*.xml
-/build/packages/Newtonsoft.Json.10.0.3/tools/*.ps1
-/build/packages
+
+/AuthTips/packages/Newtonsoft.Json.10.0.3/*.md
+/AuthTips/packages/Newtonsoft.Json.10.0.3/*.nupkg
+/AuthTips/packages/Newtonsoft.Json.10.0.3/lib/net20/*.dll
+/AuthTips/packages/Newtonsoft.Json.10.0.3/lib/net20/*.xml
+/AuthTips/packages/Newtonsoft.Json.10.0.3/lib/net35/*.dll
+/AuthTips/packages/Newtonsoft.Json.10.0.3/lib/net35/*.xml
+/AuthTips/packages/Newtonsoft.Json.10.0.3/lib/net40/*.dll
+/AuthTips/packages/Newtonsoft.Json.10.0.3/lib/net40/*.xml
+/AuthTips/packages/Newtonsoft.Json.10.0.3/lib/net45/*.dll
+/AuthTips/packages/Newtonsoft.Json.10.0.3/lib/net45/*.xml
+/AuthTips/packages/Newtonsoft.Json.10.0.3/lib/netstandard1.0/*.dll
+/AuthTips/packages/Newtonsoft.Json.10.0.3/lib/netstandard1.0/*.xml
+/AuthTips/packages/Newtonsoft.Json.10.0.3/lib/netstandard1.3/*.dll
+/AuthTips/packages/Newtonsoft.Json.10.0.3/lib/netstandard1.3/*.xml
+/AuthTips/packages/Newtonsoft.Json.10.0.3/lib/portable-net40+sl5+win8+wp8+wpa81/*.dll
+/AuthTips/packages/Newtonsoft.Json.10.0.3/lib/portable-net40+sl5+win8+wp8+wpa81/*.xml
+/AuthTips/packages/Newtonsoft.Json.10.0.3/lib/portable-net45+win8+wp8+wpa81/*.dll
+/AuthTips/packages/Newtonsoft.Json.10.0.3/lib/portable-net45+win8+wp8+wpa81/*.xml
+/AuthTips/packages/Newtonsoft.Json.10.0.3/tools/*.ps1
+/AuthTips/packages
+/packages
